--- a/SmartScan/app/src/main/res/layout/activity_main.xml
+++ b/SmartScan/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="100dp"
         android:fontFamily="@font/agbalumo"
         android:text="Home"
         android:textColor="@color/black"
@@ -39,11 +39,12 @@
         android:layout_centerInParent="true">
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/chup_anh_button"
             android:layout_width="match_parent"
             android:layout_height="150dp"
             android:layout_columnSpan="2"
             app:cardCornerRadius="30dp"
-            android:layout_margin="20dp">
+            android:layout_margin="10dp">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -65,6 +66,7 @@
             </LinearLayout>
         </androidx.cardview.widget.CardView>
         <androidx.cardview.widget.CardView
+            android:id="@+id/nhan_dien_van_ban_button"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_row="1"
@@ -94,6 +96,7 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/dich_van_ban_button"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_row="1"
@@ -122,6 +125,7 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/nhan_dien_vat_the_button"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_row="2"
@@ -150,6 +154,7 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/tim_kiem_thong_tin_anh_button"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_row="2"
