--- a/SmartScan/app/src/main/res/anim/animation3.xml
+++ b/SmartScan/app/src/main/res/anim/animation3.xml
@@ -2,8 +2,8 @@
 <scale xmlns:android="http://schemas.android.com/apk/res/android"
     android:fromXScale="1"
     android:fromYScale="1"
-    android:toXScale=".9"
-    android:toYScale=".9"
+    android:toXScale="1"
+    android:toYScale="1"
     android:pivotX="50%"
     android:pivotY="50%"
     android:duration="100"
