--- a/SmartScan/app/src/main/res/layout/activity_text_recognition.xml
+++ b/SmartScan/app/src/main/res/layout/activity_text_recognition.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".TextRecognition">
+    tools:context=".TextRecognitionActivity">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -78,7 +78,11 @@
             android:textSize="20dp"
             android:textColor="@color/black"
             android:background="@drawable/textresult"
-            android:layout_margin="20dp"/>
+            android:layout_margin="10dp"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"/>
         <Button
             android:id="@+id/copy_text"
             android:layout_width="wrap_content"
@@ -89,6 +93,7 @@
             android:background="@drawable/button"
             android:textColor="@color/black"
             android:layout_gravity="center"
-            android:padding="5dp"/>
+            android:padding="5dp"
+            />
     </LinearLayout>
 </ScrollView>
