--- a/SmartScan/app/src/main/res/layout/activity_text_recognition.xml
+++ b/SmartScan/app/src/main/res/layout/activity_text_recognition.xml
@@ -39,7 +39,8 @@
             android:layout_width="match_parent"
             android:layout_height="400dp"
             android:layout_marginBottom="10dp"
-            android:background="@drawable/baseline_image_24" />
+            android:background="@drawable/baseline_image_24"
+            android:padding="5dp"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -53,7 +54,7 @@
                 android:background="@drawable/button"
                 android:textColor="@color/black"
                 android:text="Chụp ảnh"
-                android:layout_marginRight="30dp"/>
+                android:layout_marginRight="30dp" />
             <ImageButton
                 android:id="@+id/xoay_anh"
                 android:layout_width="wrap_content"
