--- a/SmartScan/app/src/main/res/values-night/themes.xml
+++ b/SmartScan/app/src/main/res/values-night/themes.xml
@@ -1,8 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.SmartScan" parent="Theme.AppCompat.Light.NoActionBar"
+    <style name="Base.Theme.SmartScan" parent="Theme.Material3.Light.NoActionBar"
         >
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <item name="colorPrimary">@color/white </item>
     </style>
 </resources>
