--- a/SmartScan/app/src/main/res/layout/activity_translate.xml
+++ b/SmartScan/app/src/main/res/layout/activity_translate.xml
@@ -56,11 +56,18 @@
             android:layout_height="200dp"
             android:textSize="16dp"
             android:textColor="@color/black"
-            android:padding="20dp"
+            android:padding="15dp"
             android:layout_margin="10dp"
             android:background="@drawable/button"
             android:layout_marginTop="5dp"
             android:gravity="top"/>
+        <TextView
+            android:id="@+id/change_language_input"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#3CA8DF"
+            android:textSize="16dp"
+            android:layout_marginLeft="30dp"/>
         <ImageView
             android:layout_width="50dp"
             android:layout_height="50dp"
@@ -92,7 +99,8 @@
             android:layout_margin="10dp"
             android:background="@drawable/button"
             android:layout_marginTop="5dp"
-            android:gravity="top"/>
+            android:gravity="top"
+            android:textIsSelectable="true"/>
         <Button
             android:id="@+id/dich_button"
             android:layout_width="wrap_content"
@@ -100,6 +108,7 @@
             android:background="@drawable/button"
             android:text="Dịch"
             android:layout_gravity="center"
-            android:layout_marginTop="20dp"/>
+            android:layout_marginTop="20dp"
+            android:padding="15dp"/>
     </LinearLayout>
 </ScrollView>
