--- a/SmartScan/app/src/main/res/layout/activity_object_detection.xml
+++ b/SmartScan/app/src/main/res/layout/activity_object_detection.xml
@@ -6,35 +6,77 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ObjectDetectionActivity">
+
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-    <LinearLayout
+        android:id="@+id/linear"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:orientation="horizontal">
-        <Button
-            android:id="@+id/back_button_dich"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:background="@drawable/baseline_arrow_back_24"/>
-        <TextView
-            android:layout_width="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Nhận diện vật thể"
-            android:textSize="20dp"
-            android:textColor="@color/black"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:gravity="center"/>
-    </LinearLayout>
+            android:layout_marginTop="5dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/back_button_object_detection"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="@drawable/baseline_arrow_back_24" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="Nhận diện vật thể"
+                android:textColor="@color/black"
+                android:textSize="20dp" />
+        </LinearLayout>
+
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/black"/>
+            android:background="@color/black" />
     </LinearLayout>
 
 
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:padding="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/linear">
+
+        <Button
+            android:id="@+id/chup_anh_object"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button"
+            android:layout_marginRight="30dp"
+            android:text="Chụp ảnh" />
+
+        <Button
+            android:id="@+id/chon_anh_object"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button"
+            android:layout_marginLeft="30dp"
+            android:text="Chọn ảnh" />
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/hinh_anh"
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        android:background="@drawable/baseline_image_24"
+        android:padding="5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 </androidx.constraintlayout.widget.ConstraintLayout>
