--- a/SmartScan/app/src/main/res/layout/activity_text_recognition.xml
+++ b/SmartScan/app/src/main/res/layout/activity_text_recognition.xml
@@ -39,6 +39,7 @@
             android:layout_width="match_parent"
             android:layout_height="400dp"
             android:layout_marginBottom="10dp"
+            android:layout_marginTop="5dp"
             android:background="@drawable/baseline_image_24"
             android:padding="5dp"/>
         <LinearLayout
